# esjzone-novel-downloader

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start.bat
src/: __init__.py  cli.py  client.py  config_loader.py  cookie_manager.py  download_manager.py  epub.py  favorites_manager.py  logger_config.py  model.py  monitor.py  parser.py  utils.py
